--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.datasource.url=jdbc:mysql://melaniedb.cbtnxurckntc.us-west-2.rds.amazonaw
 spring.datasource.username=admin
 spring.datasource.password=maximus17
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.max-lifetime=6000
+spring.datasource.max-lifetime=120
+logging.level.org.springframework.web=DEBUG
