--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-// aqui van todas la configuraciones de cuando se cargo el proyecto
+/ aqui van todas la configuraciones de cuando se cargo el proyecto
 
 server.port=80
 
@@ -7,9 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database = MYSQL
 
-spring.datasource.url=jdbc:mysql://melaniedb.cbtnxurckntc.us-west-2.rds.amazonaws.com:3306/techshop?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=maximus17
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.max-lifetime=120
 logging.level.org.springframework.web=DEBUG
